set height to auto to prevent image distortions

--- a/05-ecommerce-homepage/src/scss/3-modules/_product.scss
+++ b/05-ecommerce-homepage/src/scss/3-modules/_product.scss
@@ -39,6 +39,7 @@
 
     &__img {
         width: 100%;
+        height: auto;
         margin-bottom: 0.5rem;
     }
 
